# minizipview

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  tablemodel.cpp  tablemodel.h
